Add request specifications
