# docs/swagger.json
@@ -54,12 +54,24 @@
                 "consumes": [
                     "application/json",
                     "text/xml",
-                    "application/x-www-form-urlencoded"
+                    "application/x-www-form-urlencoded",
+                    "multipart/form-data"
                 ],
                 "tags": [
                     "create"
                 ],
                 "summary": "Create room",
+                "parameters": [
+                    {
+                        "description": "Room create request",
+                        "name": "RoomCreateRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/data.RoomCreateRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -88,7 +100,8 @@
                 "consumes": [
                     "application/json",
                     "text/xml",
-                    "application/x-www-form-urlencoded"
+                    "application/x-www-form-urlencoded",
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -99,11 +112,13 @@
                 "summary": "Get room status",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Room ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "RoomCreateRequest",
+                        "name": "RoomCreateRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/data.RoomCreateRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -132,13 +147,23 @@
                 "consumes": [
                     "application/json",
                     "text/xml",
-                    "application/x-www-form-urlencoded"
+                    "application/x-www-form-urlencoded",
+                    "multipart/form-data"
                 ],
                 "tags": [
                     "room"
                 ],
                 "summary": "Connect to the room",
                 "parameters": [
+                    {
+                        "description": "Room connect request",
+                        "name": "RoomConnectRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/data.RoomConnectRequest"
+                        }
+                    },
                     {
                         "type": "integer",
                         "description": "Room ID",
@@ -170,7 +195,8 @@
                 "consumes": [
                     "application/json",
                     "text/xml",
-                    "application/x-www-form-urlencoded"
+                    "application/x-www-form-urlencoded",
+                    "multipart/form-data"
                 ],
                 "tags": [
                     "room"
@@ -311,7 +337,8 @@
                 "consumes": [
                     "application/json",
                     "text/xml",
-                    "application/x-www-form-urlencoded"
+                    "application/x-www-form-urlencoded",
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -355,13 +382,23 @@
                 "consumes": [
                     "application/json",
                     "text/xml",
-                    "application/x-www-form-urlencoded"
+                    "application/x-www-form-urlencoded",
+                    "multipart/form-data"
                 ],
                 "tags": [
                     "status"
                 ],
                 "summary": "Set content status",
                 "parameters": [
+                    {
+                        "description": "Room status",
+                        "name": "Status",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/data.Status"
+                        }
+                    },
                     {
                         "type": "integer",
                         "description": "Room ID",
@@ -393,7 +430,8 @@
                 "consumes": [
                     "application/json",
                     "text/xml",
-                    "application/x-www-form-urlencoded"
+                    "application/x-www-form-urlencoded",
+                    "multipart/form-data"
                 ],
                 "tags": [
                     "status"
@@ -479,11 +517,27 @@
                 }
             }
         },
+        "data.RoomConnectRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "data.RoomCreate": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "data.RoomCreateRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
                 }
             }
         },
